--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ p{
   display:block;
   margin-bottom:15px;
   width:100%;
-  background:#eee;
+  background: #000000;
   height:35px;
   border-radius:3px;
   -moz-border-radius:3px;
@@ -143,11 +143,11 @@ p{
 }
 
 .fa-bookmark-o {
-  color: #506A9E;
+  color: #035c08;
 }
 
 .skill-title {
-  color: #506A9E;
+  color: #035c08;
   font-size: 20px;
 }
 
@@ -280,7 +280,7 @@ p{
     font-size: 7rem;
     display: block;
 }
-.card-content a {color: #2196F3;}
+.card-content a {color: #035c08;}
 
 .card-content a:hover {color: #2196F3;}
 
