--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ p{
   display:block;
   margin-bottom:15px;
   width:100%;
-  background: #000000;
+  background: #2e3032;
   height:35px;
   border-radius:3px;
   -moz-border-radius:3px;
@@ -245,7 +245,7 @@ p{
 }
 
 #nav_f{
-    box-shadow: 0 1px 6px rgba(0,0,0,.35) !important; 
+    box-shadow: 0 1px 6px rgba(0,0,0,.35) !important;
     -webkit-box-shadow:0 1px 6px rgba(0,0,0,.35) !important;
 }
 /* Header Text*/
